--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
-.App {
+.App .header {
+  position: relative;
+  flex: auto;
+  background-color: #282c34;
+  padding: 20px;
+  color: white;
   text-align: center;
+  font-size: 24px;
+}
+
+/* Position Auth in the top-right of the header */
+.auth-container {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .profile-photo-container {
+    margin-right: 10px;
+    img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      cursor: pointer;
+    }
+  }
 }
